/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.common.driver;

import "api/common/page.proto";
import "api/common/r.proto";
import "api/common/entity.proto";
import "driver_query.proto";
import "driver_query_page.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.common.driver";
option java_outer_classname = "PointProto";
option objc_class_prefix = "Driver";
option java_multiple_files = true;

/*
Api
服务接口，定义了驱动点位相关的RPC调用
*/
service PointApi {
  // 分页查询点位信息
  rpc SelectByPage (GrpcPagePointQuery) returns (GrpcRPagePointDTO);
  // 根据点位ID查询点位信息
  rpc SelectById (GrpcPointQuery) returns (GrpcRPointDTO);
}

/*
Point R Page
点位分页查询的响应结构体
*/
message GrpcRPagePointDTO {
  /*
  R
  通用返回结果，包含状态码、消息等
  */
  GrpcR result = 1;

  /*
  Data
  返回的分页点位数据
  */
  GrpcPagePointDTO data = 2;
}

/*
Point Page
点位分页数据结构体
*/
message GrpcPagePointDTO {
  /*
  Page
  分页信息，包含页码、页大小、总数等
  */
  GrpcPage page = 1;

  /*
  Data
  点位数据列表
  */
  repeated GrpcPointDTO data = 2;
}

/*
Point
单个点位查询的响应结构体
*/
message GrpcRPointDTO {
  /*
  R
  通用返回结果，包含状态码、消息等
  */
  GrpcR result = 1;

  /*
  Data
  返回的单个点位数据
  */
  GrpcPointDTO data = 2;
}